feat: add Booking and Payment REST APIs
